Modification: * fpga/Makefile: added  target to rebuild xilinx specific ips. * fpga/xilinx/xlnx_clk_gen/tcl/run.tcl: reduced the frequency of the clock generator to 40 MHz. * rtl/src/culsans_test.sv: Removed the verbosity during test. * rtl/src/culsans_top_usecase.sv: adjusted rtc clock to be the same of the fpga. Adjusted the uart_bus baudrate to match the dtb (This works only if InclUart is set to 1). * tests/common.mk: modified the script for eth env. * tests/integration/*: fixup for the simulation environment. * tests/linux/tb/culsans_tb.sv: Set the frequency of the test to 40Mhz. Added memory preload of the linux image and dtb. * tests/linux/testlist/linux/Makefile: Fixed version of python. * tests/linux/testlist/linux_recompiled/{Makefile, dtb_reverser.py, trace_analyzer_v2.py, dtb_to_text.md} * tests/linux/testlist/linux_1core/{Makefile, dtb_reverser.py, trace_analyzer_v2.py, dtb_to_text.md} * patches: various patch for the submodules.

--- a/tests/linux/testlist/linux_recompiled/Makefile
+++ b/tests/linux/testlist/linux_recompiled/Makefile
@@ -10,8 +10,10 @@ dis : fw_payload.dis
 
 main.hex : fw_payload.elf
 	$(RV_OBJCOPY) -O verilog fw_payload.elf main.vh
-	../../test_automation/vh2hex.py -m main.vh -o main.hex -b 0x80000000 -d 0x80000000 -i 0x80100000
-	rm main.vh
+#	$(RV_OBJCOPY) -O verilog genesys-culsans.dtb dtb.vh
+#	../../test_automation/vh2hex.py -m main.vh -o main.hex -b 0x80000000 -d 0x80000000 -i 0x80100000
+	../../test_automation/vh2hex.py -m main.vh -o main.hex -b 0x80000000
+#	rm main.vh
 
 sw : main.hex
 
@@ -24,12 +26,12 @@ VSIM_LIB = ../../work
 
 TOP_LEVEL = culsans_tb
 SIM_TCL = sim.tcl
-SIM_RUNTIME ?= 100ms
+SIM_RUNTIME ?= -a
 
 
 #UVM_FLAGS = +UVM_NO_RELNOTES +UVM_VERBOSITY=LOW
-VSIM_FLAGS = -t 1ns -64 -classdebug
-VSIM_FLAGS = -suppress 12110
+VSIM_FLAGS = -t 1ps -64 -classdebug
+VSIM_FLAGS += -suppress 12110
 
 ifneq ($(COVER), 0)
     VSIM_FLAGS += -coverage
@@ -38,14 +40,14 @@ endif
 
 ifeq ($(GUI), 0)
 	VSIM_FLAGS += -c
-	VSIM_CMD = -do "run $(SIM_RUNTIME);"
+	VSIM_CMD = -do " log -r /*; run $(SIM_RUNTIME);"
 else
 	ifneq ($(GUI), 1)
 		$(error GUI must be 0 or 1)
 	else
 		GTKWAVE_CMD = gtkwave waveform.vcd
 	endif
-	VSIM_CMD = -do "source $(SIM_TCL); run $(SIM_RUNTIME);"
+	VSIM_CMD = -do "source $(SIM_TCL); log -r /*; run $(SIM_RUNTIME);"
 endif
 
 $(TEST_REPORT): main.hex
